Update README screenshots layout 5.2 add requirements to run